--- a/client/src/styles/articles.scss
+++ b/client/src/styles/articles.scss
@@ -1,12 +1,10 @@
 .articles-container {
-  border-style: solid;
-  border-color: brown;
-  width: 40vw;
-  height: 200px;
+  width: 50vw;
+  height: 400px;
   overflow: hidden;
 }
 
 .articles-container h4 {
   margin: 0;
-  padding: 0;
+  padding-bottom: 5px;
 }
