--- a/client/src/styles/categories.scss
+++ b/client/src/styles/categories.scss
@@ -1,9 +1,11 @@
 .categories-container {
-  border-style: dashed;
-  border-color: blue;
-  width: 50vw;
+  border: 2px solid #3336b9;
+  width: 60vw;
   height: 20vw;
   overflow: hidden;
+  -webkit-box-shadow: 5px 5px 11px 3px rgba(0,0,0,0.48);
+  box-shadow: 5px 5px 11px 3px rgba(0,0,0,0.48);
+  border-radius: 2px;
 }
 .categories-container h4 {
   padding: 0%;
@@ -31,10 +33,17 @@ button {
   display: inline-block;
   text-align: center;
   text-decoration: none;
+  padding: 2px;
 
   margin: 2px 2px;
   border: solid 2px transparent;
   border-radius: 0.4em;
   color: #ffffff;
-  background-color: #2b2db8;
+  background-color: #3336b9;
 }
+.category-button:hover {
+  color: #2b2d92;
+  border-color: currentColor;
+  background-color: white;
+}
+
