--- a/client/src/styles/articleRow.scss
+++ b/client/src/styles/articleRow.scss
@@ -14,3 +14,60 @@
   white-space: normal;
   overflow:visible;
 }
+
+.article-row a {
+  padding-left: 10px;
+}
+
+
+$white: #FFF;
+$gray: #888;
+$red: indianred;
+
+.like-button {
+  color: $gray;
+  font-size: .75em;
+  font-family: 'Heebo', sans-serif;
+  background-color: transparent;
+  border: 0.1em solid;
+  border-radius: 1em;
+  padding: 0.333em .2em 0em;
+  line-height: 1em;
+  box-shadow: 0 0.25em .5em -0.25em;
+  cursor: pointer;
+  transition: color 150ms ease-in-out, background-color 150ms ease-in-out, transform 150ms ease-in-out;
+  outline: 0;
+  margin: 1em 0;
+
+  &:hover {
+    color: $red;
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+
+  &.selected {
+    color: $white;
+    background-color: $red;
+    border-color: $red;
+  }
+
+  .heart-icon {
+    display: inline-block;
+    fill: currentColor;
+    width: 0.8em;
+    height: 0.8em;
+    margin-right: 0em;
+  }
+
+}
+
+.external-link{
+  text-align: right;
+  font-size: .6em;
+}
+
+a[target="_blank"]:after {
+  content: var(--my-external-icon);
+}
