--- a/client/src/styles/articles.scss
+++ b/client/src/styles/articles.scss
@@ -7,4 +7,42 @@
 .articles-container h4 {
   margin: 0;
   padding-bottom: 5px;
+  padding-top: 10px;
+}
+
+.tab {
+  overflow: hidden;
+  border: 1px solid #ff9ebb;
+  background-color: #fbf7f7;
+  border-radius: 2%;
+  box-shadow: 0 0 50px #ccc;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
