--- a/client/src/styles/categories.scss
+++ b/client/src/styles/categories.scss
@@ -1,11 +1,12 @@
 .categories-container {
-  border: 2px solid #3336b9;
+  border: 2px solid #ff9ebb;
   width: 60vw;
   height: 20vw;
   overflow: hidden;
   -webkit-box-shadow: 5px 5px 11px 3px rgba(0,0,0,0.48);
   box-shadow: 5px 5px 11px 3px rgba(0,0,0,0.48);
   border-radius: 2px;
+  background-color: #fbf7f7;
 }
 .categories-container h4 {
   padding: 0%;
@@ -39,10 +40,11 @@ button {
   border: solid 2px transparent;
   border-radius: 0.4em;
   color: #ffffff;
-  background-color: #3336b9;
+  background-color: #e05780;
+  transition: 0.3s;
 }
 .category-button:hover {
-  color: #2b2d92;
+  color: #e05780;
   border-color: currentColor;
   background-color: white;
 }
