--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   align-content: stretch;
   align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .flex-item:nth-child(2) {
@@ -19,3 +20,16 @@
   flex: 2 1 0;
   align-self: auto;
   }
+
+.title{
+    display: block;
+    background-image: linear-gradient(0deg, rgba(128,15,47,1) 8%, rgba(201,24,74,1) 40%, rgba(255,175,204,1) 69%);
+    background-clip: text;
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  }
+.icon {
+
+}
